apps/services/gitlab/gitlab/middleware.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: gitlab-buffer
  namespace: services
spec:
  buffering:
    maxRequestBodyBytes: 512000000
